crates/graphite/tests/ui/node_id_not_declared.stderr
error[E0425]: cannot find type `PersonId` in this scope
  --> tests/ui/node_id_not_declared.rs:16:14
   |
10 | pub struct Person {
   | ----------------- similarly named struct `Person` defined here
...
16 |         node Person;
   |              ^^^^^^

error[E0425]: cannot find type `PersonId` in this scope
  --> tests/ui/node_id_not_declared.rs:16:14
   |
10 | pub struct Person {
   | ----------------- similarly named struct `Person` defined here
...
16 |         node Person;
   |              ^^^^^^
   |
help: you might be missing a type parameter
   |
15 |     schema Missing<PersonId> {
   |                   ++++++++++

error[E0425]: cannot find function, tuple struct or tuple variant `PersonId` in this scope
  --> tests/ui/node_id_not_declared.rs:16:14
   |
16 |         node Person;
   |              ^^^^^^ not found in this scope

error[E0282]: type annotations needed
  --> tests/ui/node_id_not_declared.rs:14:1
   |
14 | / graphite::graph_schema! {
15 | |     schema Missing {
16 | |         node Person;
17 | |     }
18 | | }
   | |_^ cannot infer type
   |
   = note: this error originates in the macro `graphite::graph_schema` (in Nightly builds, run with -Z macro-backtrace for more info)
